--- a/MLcourse/Machine-Learning.tex
+++ b/MLcourse/Machine-Learning.tex
@@ -125,7 +125,7 @@
   \postauthor{\par}
       \predate{\centering\large\emph}
   \postdate{\par}
-    \date{2018-12-19}
+    \date{2018-12-21}
 
 % \defaultfontfeatures{
 %     Path = /home/ghassany/texmf/fonts/opentype/public/fontawesome/}
@@ -8217,7 +8217,35 @@ Cross-Validation}\label{model-selection-using-cross-validation}
 \addcontentsline{toc}{subsection}{Model Selection Using
 Cross-Validation}
 
-\chapter{References}\label{references}
+\chapter{References and Credits}\label{references-and-credits}
+
+Here are the references I used the most for this course:
+
+\begin{itemize}
+\tightlist
+\item
+  The Elements of Statistical Learning for Trevor Hastie, Robert
+  Tibshirani and Jerome H. Friedman, link .
+\item
+  Pattern Recognition and Machine Learning for Christopher Bishop, link
+  .
+\item
+  Andrew Ng's Machine Learning Mooc, link .
+\item
+  Lab notes for Statistics for Social Sciences II: Multivariate
+  Techniques, link .
+\end{itemize}
+
+Credits:
+
+\begin{itemize}
+\tightlist
+\item
+  This website was written in Rmarkdown and compiled using
+  \href{https://bookdown.org/}{bookdown}.
+\end{itemize}
+
+\chapter{Other References}\label{other-references}
 
 \bibliography{biblio.bib}
 
